; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_kprobe.c_update_symbol_cache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_kprobe.c_update_symbol_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol_cache = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.symbol_cache*)* @update_symbol_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @update_symbol_cache(%struct.symbol_cache* %0) #0 {
  %2 = alloca %struct.symbol_cache*, align 8
  store %struct.symbol_cache* %0, %struct.symbol_cache** %2, align 8
  %3 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %4 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 8
  %6 = call i64 @kallsyms_lookup_name(i32 %5)
  %7 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %8 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %7, i32 0, i32 0
  store i64 %6, i64* %8, align 8
  %9 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %10 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %1
  %14 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %15 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %18 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add i64 %19, %16
  store i64 %20, i64* %18, align 8
  br label %21

21:                                               ; preds = %13, %1
  %22 = load %struct.symbol_cache*, %struct.symbol_cache** %2, align 8
  %23 = getelementptr inbounds %struct.symbol_cache, %struct.symbol_cache* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  ret i64 %24
}

declare dso_local i64 @kallsyms_lookup_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
